add cron deployment

--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -26,13 +26,14 @@ WORKDIR tezosLink
 
 RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
+RUN mkdir src && mkdir src/common && mkdir src/common/databases
+
 COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./dist/api
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/common ./dist/common
-#COPY --from=builder --chown=tezoslinkuser tezosLink/src/common/databases/ ./src/common/databases/
+COPY --from=builder --chown=tezoslinkuser tezosLink/src/common/databases/ ./src/common/databases/
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
-
 USER tezoslinkuser
 
 CMD ["npm", "run", "api:start"]
