--- a/charts/templates/rpc-gateway/rpcgw.deployment.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.deployment.yaml
@@ -4,7 +4,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ $network }}-{{ include "helpers.fullname" $ }}-tzlink-rpcgateway
+  name: {{ include "helpers.fullname" $ }}-{{ $network }}-tzlink-rpcgateway
   namespace: {{ include "helpers.namespace" $| quote }}
   labels: {{ include "helpers.labels.rpcgateway" (dict "root" $ "network" $network)| nindent 4 }}
 spec:
@@ -21,7 +21,7 @@ spec:
       serviceAccountName: {{ $network }}-{{ .serviceAccount.name | default "rpcgateway-sa" }}
       {{ end }}
       containers:
-        - name: rpcgateway-{{ $network }}
+        - name: {{ $network }}-tzlink-rpcgateway
           image: "{{ $data.image.repository }}:{{ $data.image.tag }}"
           imagePullPolicy: {{ $data.image.pullPolicy }}
           resources: 
