Upgrade version of images and add environment variables

--- a/charts/templates/api/api.cm.yaml
+++ b/charts/templates/api/api.cm.yaml
@@ -15,6 +15,9 @@ data:
 
   DEV_PRISMA_STUDIO_DB_URL: "postgres://{{ $.Values.env.DATABASE_USER }}:{{ $.Values.env.DATABASE_PASSWORD }}@{{ $.Values.env.DATABASE_HOSTNAME}}:{{ $.Values.env.DATABASE_PORT }}/{{ $.Values.env.DATABASE_NAME }}"
 
-
+  PROMETHEUS_URL: {{ .Values.env.PROMETHEUS_URL}}
+  PROMETHEUS_NAMESPACE_TEZOSLINK: {{ .Values.env.PROMETHEUS_NAMESPACE_TEZOSLINK}}
+  PROMETHEUS_NAMESPACE_TEZOS_K8S_MAINNET: {{ .Values.env.PROMETHEUS_NAMESPACE_TEZOS_K8S_MAINNET}}
+  PROMETHEUS_NAMESPACE_TEZOS_K8S_TESTNET: {{ .Values.env.PROMETHEUS_NAMESPACE_TEZOS_K8S_TESTNET}}
 
 
