--- a/charts/sc.values.yaml
+++ b/charts/sc.values.yaml
@@ -43,7 +43,8 @@ env: # Environment variables injected through the config maps
 
   PROMETHEUS_URL: http://kube-prometheus-prometheus.kube-prometheus.svc.cluster.local:9090
   PROMETHEUS_NAMESPACE_TEZOSLINK: tezoslink-helm-test
-  PROMETHEUS_NAMESPACE_TEZOS_K8S: poc-tzk8s
+  PROMETHEUS_NAMESPACE_TEZOS_K8S_TESTNET: poc-tzk8s-limanet
+  PROMETHEUS_NAMESPACE_TEZOS_K8S_MAINNET: poc-tzk8s
 
 api: 
 
@@ -52,8 +53,8 @@ api:
   replicas: 1 # Number of pods replicas desired for the API service 
 
   image:
-    repository: rg.fr-par.scw.cloud/tezoslink/p1-api # Repository containing the API image
-    tag: v1.4.0 # Version of the API image
+    repository: rg.fr-par.scw.cloud/tezoslink/api # Repository containing the API image
+    tag: v1.5.0 # Version of the API image
     pullPolicy: Always 
 
   service:
@@ -129,8 +130,8 @@ web:
   replicas: 1 # Number of pods replicas desired for the front service 
 
   image:
-    repository: rg.fr-par.scw.cloud/tezoslink/p1-frontend # Repository containing the front image
-    tag: v1.4.0  # Version of the front image
+    repository: rg.fr-par.scw.cloud/tezoslink/p1-web # Repository containing the front image
+    tag: v1.5.1  # Version of the front image
     pullPolicy: Always
 
   service:
@@ -208,8 +209,8 @@ rpcgateway:
     network: "TESTNET" # Name of the testnet network
 
     image:
-      repository: rg.fr-par.scw.cloud/tezoslink/p1-proxy # Repository containing the rpc gateway image
-      tag: v1.4.0  # Version of the rpc gateway image
+      repository: rg.fr-par.scw.cloud/tezoslink/proxy # Repository containing the rpc gateway image
+      tag: v1.5.0  # Version of the rpc gateway image
       pullPolicy: Always
     
     secret: []  # Secrets to be injected as environment variables
@@ -284,8 +285,8 @@ rpcgateway:
     network: "MAINNET" # Name of the mainnet network
 
     image:
-      repository: rg.fr-par.scw.cloud/tezoslink/p1-proxy # Repository containing the rpcgateway image
-      tag: v1.4.0 # Version of the rpc gateway image
+      repository: rg.fr-par.scw.cloud/tezoslink/proxy # Repository containing the rpcgateway image
+      tag: v1.5.0 # Version of the rpc gateway image
       pullPolicy: Always
 
     
@@ -356,8 +357,8 @@ cron:
   enabled: true
 
   image:
-    repository: rg.fr-par.scw.cloud/tezoslink/p1-cron # Repository containing the rpcgateway image
-    tag: v1.4.0 # Version of the rpc gateway image
+    repository: rg.fr-par.scw.cloud/tezoslink/cron # Repository containing the rpcgateway image
+    tag: v1.5.0 # Version of the rpc gateway image
     pullPolicy: Always
 
   resources:
