--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="0000"
-POSTGRES_DB="tezoslink"
+PROMETHEUS_URL="http://localhost:9090"
+PROMETHEUS_NAMESPACE_TEZOSLINK="default"
+PROMETHEUS_NAMESPACE_TEZOS_K8S_MAINNET="poc-tzk8s"
+PROMETHEUS_NAMESPACE_TEZOS_K8S_TESTNET="poc-tzk8s-limanet"
 
 DATABASE_HOSTNAME="localhost"
 DATABASE_PORT="5432"
@@ -8,7 +9,6 @@ DATABASE_USER="postgres"
 DATABASE_PASSWORD="0000"
 DATABASE_NAME="tezoslink"
 
-API_HOSTNAME="http://localhost"
 API_LABEL="TezosLink API"
 API_PORT=3001
 API_ROOT_URL="/api"
