--- a/charts/templates/web/web.deployment.yaml
+++ b/charts/templates/web/web.deployment.yaml
@@ -39,18 +39,18 @@ spec:
           livenessProbe:
             httpGet:
               path: {{ .Values.env.WEB_ROOT_URL }}{{ .Values.web.livenessProbe.path }}
-              port: {{ .Values.env.WEB_PORT }}
+              port: {{ .Values.web.livenessProbe.port }}
             initialDelaySeconds: {{ .Values.web.livenessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.web.readinessProbe.periodSeconds }}
-            timeoutSeconds: {{ .Values.web.readinessProbe.timeoutSeconds }}
-            failureThreshold: {{ .Values.web.readinessProbe.failureThreshold }}
-            successThreshold: {{ .Values.web.readinessProbe.successThreshold }}
+            periodSeconds: {{ .Values.web.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.web.livenessProbe.timeoutSeconds }}
+            failureThreshold: {{ .Values.web.livenessProbe.failureThreshold }}
+            successThreshold: {{ .Values.web.livenessProbe.successThreshold }}
           {{- end }}
           {{- if .Values.web.readinessProbe.enabled }}
           readinessProbe:
             httpGet:
               path: {{ .Values.env.WEB_ROOT_URL }}{{ .Values.web.readinessProbe.path }}
-              port: {{ .Values.env.WEB_PORT }}
+              port: {{ .Values.web.readinessProbe.port }}
             initialDelaySeconds: {{ .Values.web.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.web.readinessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.web.readinessProbe.timeoutSeconds }}
